@@ -18,9 +18,6 @@
  */
 package org.apache.pinot.client;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -45,7 +42,7 @@ public class ConnectionFactoryTest {
             pinotClientTransport);
 
     // Check that the broker list has the right length and has the same servers
-    Assert.assertEquals(connection.getBrokerList(), Collections.emptyList());
+    Assert.assertEquals(connection.getBrokerList(), List.of());
   }
 
   @Test
@@ -69,21 +66,16 @@ public class ConnectionFactoryTest {
     Connection connection = ConnectionFactory.fromHostList(broker1, broker2);
 
     // Check that the broker list has the right length and has the same servers
-    List<String> brokers = new ArrayList<>();
-    brokers.add(broker1);
-    brokers.add(broker2);
+    List<String> brokers = List.of(broker1, broker2);
     Assert.assertEquals(connection.getBrokerList(), brokers);
   }
 
   @Test
   public void testBrokerListWithHeaders() {
     // Create the connection
-    List<String> brokers = new ArrayList<>();
-    brokers.add("127.0.0.1:1234");
-    brokers.add("localhost:2345");
+    List<String> brokers = List.of("127.0.0.1:1234", "localhost:2345");
 
-    Map<String, String> headers = new HashMap<>();
-    headers.put("Caller", "curl");
+    Map<String, String> headers = Map.of("Caller", "curl");
 
     JsonAsyncHttpPinotClientTransportFactory factory = new JsonAsyncHttpPinotClientTransportFactory();
     factory.setHeaders(headers);
